--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@tailwindcss/forms": "^0.5.6",
     "@tailwindcss/typography": "^0.5.10",
     "autoprefixer": "^10.4.15",
+    "el-transition": "^0.0.7",
     "esbuild": "^0.19.2",
     "postcss": "^8.4.29",
     "postcss-cli": "^10.1.0",
