more setup and navbar

--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@trpc/react-query": "11.0.0-rc.660",
     "@trpc/server": "11.0.0-rc.660",
     "client-only": "^0.0.1",
+    "lucide-react": "^0.468.0",
     "next": "15.1.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
