--- a/package.json
+++ b/package.json
@@ -34,5 +34,8 @@
         "tailwindcss": "^3.2.1",
         "typescript": "^5.0.2",
         "vite": "^6.0"
+    },
+    "dependencies": {
+        "lucide-react": "^0.473.0"
     }
 }
