--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
         "vite": "^6.0"
     },
     "dependencies": {
+        "@fontsource/poppins": "^5.1.1",
         "lucide-react": "^0.473.0"
     }
 }
