--- a/package.json
+++ b/package.json
@@ -38,10 +38,12 @@
     "dependencies": {
         "@fontsource/poppins": "^5.1.1",
         "@radix-ui/react-avatar": "^1.1.2",
+        "@radix-ui/react-label": "^2.1.1",
         "@radix-ui/react-slot": "^1.1.1",
         "class-variance-authority": "^0.7.1",
         "clsx": "^2.1.1",
         "lucide-react": "^0.473.0",
+        "react-hook-form": "^7.54.2",
         "tailwind-merge": "^2.6.0"
     }
 }
