--- a/package.json
+++ b/package.json
@@ -10,13 +10,13 @@
         "@headlessui/react": "^2.0.0",
         "@inertiajs/react": "^2.0.0",
         "@tailwindcss/forms": "^0.5.3",
+        "@tailwindcss/postcss": "^4.0.0",
         "@types/node": "^18.13.0",
         "@types/react": "^19.0.8",
         "@types/react-dom": "^19.0.3",
         "@typescript-eslint/eslint-plugin": "^7.16.0",
         "@typescript-eslint/parser": "^7.16.0",
         "@vitejs/plugin-react": "^4.2.0",
-        "autoprefixer": "^10.4.12",
         "axios": "^1.7.4",
         "concurrently": "^9.0.1",
         "eslint": "^8.57.0",
@@ -28,10 +28,10 @@
         "postcss": "^8.4.31",
         "prettier": "^3.3.0",
         "prettier-plugin-organize-imports": "^4.0.0",
-        "prettier-plugin-tailwindcss": "^0.6.5",
+        "prettier-plugin-tailwindcss": "^0.6.11",
         "react": "^19.0.0",
         "react-dom": "^19.0.0",
-        "tailwindcss": "^3.2.1",
+        "tailwindcss": "^4.0.0",
         "typescript": "^5.0.2",
         "vite": "^6.0"
     },
