--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "dependencies": {
         "@fontsource/poppins": "^5.1.1",
         "@radix-ui/react-avatar": "^1.1.2",
+        "@radix-ui/react-checkbox": "^1.1.3",
         "@radix-ui/react-label": "^2.1.1",
         "@radix-ui/react-slot": "^1.1.1",
         "class-variance-authority": "^0.7.1",
