--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
         "vite": "^6.0"
     },
     "dependencies": {
+        "@fontsource-variable/jetbrains-mono": "^5.1.2",
         "@fontsource/poppins": "^5.1.1",
         "@radix-ui/react-avatar": "^1.1.2",
         "@radix-ui/react-checkbox": "^1.1.3",
