--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
         "react": "^19.0.0",
         "react-dom": "^19.0.0",
         "tailwindcss": "^4.0.0",
+        "tailwindcss-animate": "^1.0.7",
         "typescript": "^5.0.2",
         "vite": "^6.0"
     },
@@ -41,11 +42,17 @@
         "@radix-ui/react-avatar": "^1.1.2",
         "@radix-ui/react-checkbox": "^1.1.3",
         "@radix-ui/react-label": "^2.1.1",
+        "@radix-ui/react-select": "^2.1.5",
         "@radix-ui/react-slot": "^1.1.1",
         "class-variance-authority": "^0.7.1",
         "clsx": "^2.1.1",
         "lucide-react": "^0.473.0",
         "react-hook-form": "^7.54.2",
         "tailwind-merge": "^2.6.0"
+    },
+    "overrides": {
+        "tailwindcss-animate": {
+            "tailwindcss": "$tailwindcss"
+        }
     }
 }
