--- a/package.json
+++ b/package.json
@@ -44,8 +44,10 @@
         "@radix-ui/react-label": "^2.1.1",
         "@radix-ui/react-select": "^2.1.5",
         "@radix-ui/react-slot": "^1.1.1",
+        "@types/lodash": "^4.17.15",
         "class-variance-authority": "^0.7.1",
         "clsx": "^2.1.1",
+        "lodash": "^4.17.21",
         "lucide-react": "^0.473.0",
         "react-hook-form": "^7.54.2",
         "tailwind-merge": "^2.6.0",
