--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
         "lodash": "^4.17.21",
         "lucide-react": "^0.473.0",
         "react-hook-form": "^7.54.2",
+        "sonner": "^1.7.4",
         "tailwind-merge": "^2.6.0",
         "vaul": "^1.1.2"
     },
